build: update to gradle 8.14.2, update all dependencies
Co-authored-by: anon